# duck-tracker-jetson

./: .gitignore  CMakeLists.txt
include/: centroid_kernel.h  pid_controller.h  preprocess_kernel.h  preprocess_plugin.h  serial_control.h
src/: centroid_kernel.cu  main.cpp  pid_controller.cpp  preprocess_kernel.cu  preprocess_plugin.cpp  serial_control.cpp
